# text-embed-api

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
embed_api/: config.py  embedding_service.py  model_manager.py  routes.py  schemas.py
